--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.45'
     compile 'com.j256.ormlite:ormlite-core:4.45'
     compile 'cc.trity.floatingactionbutton:library:1.0.0'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile files('libs/jtds-1.2.5.jar')
     compile files('libs/mysql-connector-java-3.0.17-ga-bin.jar')
     compile files('libs/jtds-1.3.1.jar')
     compile files('libs/sqljdbc4-3.0.jar')
     compile files('libs/sqlserverjdbc.jar')
     compile files('libs/sqljdbc4-2.0.jar')
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
