--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     compile 'com.journeyapps:zxing-android-embedded:3.0.3@aar'
     compile 'com.google.zxing:core:3.2.0'
 
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+
 }
