--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'io.reactivex:rxandroid:0.24.0'
-    compile 'com.j256.ormlite:ormlite-android:4.45'
-    compile 'com.j256.ormlite:ormlite-core:4.45'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'cc.trity.floatingactionbutton:library:1.0.0'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile files('libs/jtds-1.2.5.jar')
@@ -47,5 +47,7 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
+
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 
 }
